fix divider overflow

--- a/src/frontend/src/styles/components/management-tile.scss
+++ b/src/frontend/src/styles/components/management-tile.scss
@@ -14,6 +14,9 @@
     width: $tile-width;
     color: #000;
 
+    // avoid the divider overflowing the card
+    overflow: hidden;
+
     .heading {
         p {
             @include type-style('body-compact-02');
